# turing

./: .gitignore  Cargo.toml  README.md  pyproject.toml  run.sh
.github/workflows/: ci.yml  release.yml
python/turing/: audit.py  config.py
python/turing/cli/: main.py
python/turing/core/: exceptions.py  key.py  memory.py  otp.py
python/turing/rng/: chaes.py  system.py
python/turing/rng/qrng/: __init__.py  anu.py
python/turing/transport/: __init__.py  offline.py  quic.py
python/turing/vault/: manager.py
python/turing/vault/hsm/: pkcs11.py
src/: lib.rs
src/crypto/: mod.rs  otp.rs  xor.rs
src/memory/: mlock.rs  mod.rs  secret.rs
tests/: test_key.py  test_memory.py  test_otp.py
turing/: __init__.py
turing/cli/: __init__.py  style.py
turing/core/: __init__.py  key.py  otp.py
turing/rng/: provider.py
turing/rng/qrng/: idquantique.py  nist_beacon.py
turing/utils/: burn.py  constant_time.py
turing/vault/: age.py  shamir.py
turing/vault/hsm/: __init__.py  yubihsm.py
